--- a/index.html
+++ b/index.html
@@ -401,6 +401,19 @@
             draw();
         });
 
+        canvas.addEventListener('touchstart', (event) => {
+            const rect = canvas.getBoundingClientRect();
+            const x = Math.floor((event.touches[0].clientX - rect.left) / cellSize);
+            const y = Math.floor((event.touches[0].clientY - rect.top) / cellSize);
+            cheese = { x, y };
+            cheeseCount++;
+            updateCheeseCountDisplay();
+            visitedCells.clear();
+            mouseDrawn = false;
+            moveMouse();
+            draw();
+        });
+
         document.getElementById('generateMaze').addEventListener('click', () => {
             clearInterval(mouseInterval);
             mouseX = 0;
